--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
-        android:name=".MyApplication"
+        android:name=".app.MyApplication"
         android:allowBackup="true"
         android:icon="@drawable/photo"
         android:label="@string/app_name"
@@ -21,17 +21,17 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activity.GalleryActivity" />
+        <activity android:name=".gallery.GalleryActivity" />
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_key" />
 
         <activity
-            android:name=".activity.MapsActivity"
+            android:name=".map.MapsActivity"
             android:label="@string/title_activity_maps" />
         <activity
-            android:name=".activity.LoginActivity"
+            android:name=".user.LoginActivity"
             android:theme="@style/SplashTheme"
             android:windowSoftInputMode="stateHidden">
             <intent-filter>
@@ -40,9 +40,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activity.RecentActivity" />
-        <activity android:name=".activity.FavouritesActivity" />
-        <activity android:name=".activity.PhotoActivity">
+        <activity android:name=".recent.RecentActivity" />
+        <activity android:name=".favourites.FavouritesActivity" />
+        <activity android:name=".photoview.PhotoActivity">
             <intent-filter>
                 <category android:name="android.intent.category.DEFAULT" />
 
@@ -50,7 +50,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".activity.MainActivity"
+            android:name=".main.MainActivity"
             android:windowSoftInputMode="stateHidden" />
 
         <activity
